# AiTool

./: .gitignore  README.md
server/: Cargo.toml
server/common/src/: response.rs
server/db/: Cargo.toml
server/db/src/: lib.rs  postgresql.rs  redis.rs
server/routers/: Cargo.toml
server/routers/src/: init.rs  lib.rs
server/routers/src/search/: api.rs  dto.rs  handler.rs  mod.rs  servers.rs
server/routers/src/tools/: api.rs  dto.rs  handler.rs  mod.rs  servers.rs
web/: nuxt.config.ts  package.json
web/assets/css/: iconfont.css  style.css
web/components/: AHref.vue  Footer.vue  Header.vue  Login.vue  Search.vue  Sidebar.vue  SimpleSidebar.vue  Top.vue  TopTag.vue
web/components/floor/: Head.vue  List.vue  ListItem.vue
web/components/tools/: DetailMain.vue  HomeMain.vue
web/composables/: useAbout.ts  useMain.ts  useRequest.ts  useSearch.ts  useTools.ts
web/layouts/: default.vue
web/middleware/: auth.ts  setup.global.ts
web/pages/: [...slug].vue  about.vue  category.vue  hot.vue  index.vue  login.vue  new.vue  search.vue  signup.vue  tag.vue
web/pages/huggingface/: [type].vue
web/pages/producthunt/: [time].vue
web/pages/tool/: [tid].vue
web/plugins/: price.ts  ua.ts
web/public/: ads.txt  robots.txt  sitemap.xml
web/public/js/: analytics.js  clarity.js
web/server/api/: producthunt.ts
web/server/middleware/: auth.ts
web/types/: index.d.ts  tools.ts
