[workspace]
members = ["bin", "db", "common", "routers", "middleware"]
resolver = "1"

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors"] }
axum = { version = "0.7.4", features = ["macros"] }
redis = { version = "0.24.0", features = ["json"] }
sqlx = { version = "0.7.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "macros",
  "chrono",
  "uuid",
  "json",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
once_cell = "1.19.0"
log = "0.4.21"
log4rs = "1.3.0"
dotenv = "0.15"
chrono = "0.4.34"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
comrak = "0.21.0"
urlencoding = "2.1.3"
