[package]
name = "routers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { workspace = true }
tower-http = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
comrak = { workspace = true }
urlencoding = { workspace = true }

common = { path = "../common" }
db = { path = "../db" }
